--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Golden - it's nice to meet you!</title>
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css" />
+    <link rel="stylesheet" href="css/style.css.map" />
   </head>
-  <body>
-    <p>działa123</p>
-  </body>
+  <body></body>
 </html>
