Add fonts, fontawesome, colors and basic scss for global.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Golden - it's nice to meet you!</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700|Roboto+Slab&display=swap&subset=latin-ext"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="vendor/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/style.css.map" />
+    <script src="https://kit.fontawesome.com/c9f6237576.js"></script>
   </head>
   <body></body>
 </html>
