Add header/nav html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,21 @@
     <link rel="stylesheet" href="css/style.css.map" />
     <script src="https://kit.fontawesome.com/c9f6237576.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <span class="logo">Golden</span>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">portfolio</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </nav>
+      <h2 class="page-subtitle">Welcome To Our Studio</h2>
+      <h1 class="page-title">It's nice to meet you</h1>
+      <button class="button-main">tell me more</button>
+    </header>
+  </body>
 </html>
