--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="vendor/bootstrap-grid.css" />
-    <link rel="stylesheet" href="css/style.css.map" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/c9f6237576.js"></script>
   </head>
   <body>
     <header>
-      <nav>
-        <span class="logo">Golden</span>
-        <ul>
-          <li><a href="#">home</a></li>
-          <li><a href="#">services</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">contact</a></li>
-        </ul>
-      </nav>
-      <h2 class="page-subtitle">Welcome To Our Studio</h2>
-      <h1 class="page-title">It's nice to meet you</h1>
-      <button class="button-main">tell me more</button>
+      <div class="container">
+        <nav>
+          <div class="row">
+            <span class="logo col-5">Golden</span>
+            <ul class="col-7">
+              <li><a href="#">home</a></li>
+              <li><a href="#">services</a></li>
+              <li><a href="#">portfolio</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">contact</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="header-container">
+          <h2 class="page-subtitle">Welcome To Our Studio</h2>
+          <h1 class="page-title">It's nice to meet you</h1>
+          <button class="button-main">tell me more</button>
+        </div>
+      </div>
     </header>
   </body>
 </html>
