Add services html

--- a/index.html
+++ b/index.html
@@ -35,5 +35,36 @@
         </div>
       </div>
     </header>
+    <div class="container">
+      <h2 class="title">services</h2>
+      <h3 class="subtitle">Proin iaculis purus consequant sem cure.</h3>
+
+      <div class="row">
+        <div class="service col-12 col-md-3">
+          <i class="fas fa-shopping-basket"></i>
+          <h3 class="services-title">E-commerce</h3>
+          <p>
+            Proin iaculis purus consequat sem cure digni ssim. Donec porttitora
+            entum suscipit aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </div>
+        <div class="service col-12 col-md-3">
+          <i class="fas fa-laptop"></i>
+          <h3 class="services-title">Responsive Web</h3>
+          <p>
+            Proin iaculis purus consequat sem cure digni ssim. Donec porttitora
+            entum suscipit aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </div>
+        <div class="service col-12 col-md-3">
+          <i class="fas fa-unlock-alt"></i>
+          <h3 class="services-title">Web Security</h3>
+          <p>
+            Proin iaculis purus consequat sem cure digni ssim. Donec porttitora
+            entum suscipit aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
