--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         </div>
       </div>
     </header>
-    <div class="container">
+    <div class="container services">
       <h2 class="title">services</h2>
       <h3 class="subtitle">Proin iaculis purus consequant sem cure.</h3>
 
       <div class="row">
-        <div class="service col-12 col-md-3">
+        <div class="service col-12 col-md-4">
           <i class="fas fa-shopping-basket"></i>
           <h3 class="services-title">E-commerce</h3>
           <p>
@@ -48,7 +48,7 @@
             entum suscipit aenean rhoncus posuere odio in tincidunt.
           </p>
         </div>
-        <div class="service col-12 col-md-3">
+        <div class="service col-12 col-md-4">
           <i class="fas fa-laptop"></i>
           <h3 class="services-title">Responsive Web</h3>
           <p>
@@ -56,7 +56,7 @@
             entum suscipit aenean rhoncus posuere odio in tincidunt.
           </p>
         </div>
-        <div class="service col-12 col-md-3">
+        <div class="service col-12 col-md-4">
           <i class="fas fa-unlock-alt"></i>
           <h3 class="services-title">Web Security</h3>
           <p>
