Add portfolio html/css

--- a/index.html
+++ b/index.html
@@ -66,5 +66,43 @@
         </div>
       </div>
     </div>
+    <section class="portfolio">
+      <div class="container">
+        <h2 class="title">our portfolio</h2>
+        <h3 class="subtitle">Proin iaculis purus consequant sem cure.</h3>
+        <div class="row">
+          <div class="col-12 col-md-4">
+            <img src="/images/Image.png" alt="Ebony & Ivory - image" />
+            <h3 class="services-title">Ebony & Ivory</h3>
+            <h3 class="subtitle">Branding</h3>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="/images/Image-2.png" alt="Smart Stationary - image" />
+            <h3 class="services-title">Smart Stationary</h3>
+            <h3 class="subtitle">Print Design</h3>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="/images/Image-3.png" alt="Clever Poster - image" />
+            <h3 class="services-title">Clever Poster</h3>
+            <h3 class="subtitle">Print Design</h3>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="/images/Image-4.png" alt="Vinyl Record - image" />
+            <h3 class="services-title">Vinyl Record</h3>
+            <h3 class="subtitle">Product Mock-Up</h3>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="/images/Image-5.png" alt="Treehouse Template - image" />
+            <h3 class="services-title">Treehouse Template</h3>
+            <h3 class="subtitle">Web Design</h3>
+          </div>
+          <div class="col-12 col-md-4">
+            <img src="/images/Image-6.png" alt="Burned Logo - image" />
+            <h3 class="services-title">Burned Logo</h3>
+            <h3 class="subtitle">Branding</h3>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
