Add footer html

--- a/index.html
+++ b/index.html
@@ -104,5 +104,25 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <p>&copy; Copyright 2019 Pawel Jadach</p>
+        <ul class="social-media">
+          <li>
+            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-youtube"></i>Twitter</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
