Add footer media-query

--- a/index.html
+++ b/index.html
@@ -107,21 +107,23 @@
 
     <footer>
       <div class="container">
-        <p>&copy; Copyright 2019 Pawel Jadach</p>
-        <ul class="social-media">
-          <li>
-            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-youtube"></i>Twitter</a>
-          </li>
-        </ul>
+        <div class="row">
+          <p class="col-12 col-md-4">&copy; Copyright 2019 Pawel Jadach</p>
+          <ul class="social-media col-12 col-md-8">
+            <li>
+              <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i>Instagram</a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-youtube"></i>Twitter</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
