--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
       <div class="container">
         <nav>
           <div class="row">
-            <span class="logo col-5">Golden</span>
-            <ul class="col-7">
-              <li><a href="#">home</a></li>
-              <li><a href="#">services</a></li>
-              <li><a href="#">portfolio</a></li>
-              <li><a href="#">about</a></li>
-              <li><a href="#">contact</a></li>
+            <span class="logo col-12 col-md-5">Golden</span>
+            <ul class="col-12 col-md-7">
+              <div class="row">
+                <li class="col-12 col-md-2"><a href="#">home</a></li>
+                <li class="col-12 col-md-3"><a href="#">services</a></li>
+                <li class="col-12 col-md-3"><a href="#">portfolio</a></li>
+                <li class="col-12 col-md-2"><a href="#">about</a></li>
+                <li class="col-12 col-md-2"><a href="#">contact</a></li>
+              </div>
             </ul>
           </div>
         </nav>
